// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > postSchema > audit > expected call 1`] = `
{
  "description": "vespillo",
  "id": "vespillo",
  "jsonSchema": {},
  "kind": "accessRequest",
  "name": "Jaime Hilll",
}
`;

exports[`routes > schema > postSchema > successfully stores the schema 1`] = `
{
  "schema": {
    "description": "vespillo",
    "id": "vespillo",
    "jsonSchema": {},
    "kind": "accessRequest",
    "name": "Jaime Hilll",
  },
}
`;
